# quantmt5live

./: .gitignore  IMPROVEMENTS.md  RESEARCH_LOG.md  WINDOWS_MT5_DEPLOYMENT.md  pyproject.toml  qh.py  run_flatten.bat  run_live.bat  run_monitor_only.bat  run_ready_check.bat  run_shadow.bat
.github/workflows/: ci.yml
configs/: competition.toml  default.toml
data/: downloaded_backtest_prices.csv  downloaded_backtest_quotes.csv
docs/: README.md  windows_build_instructions.html
docs/10_foundations/: 05_ACCOUNT_AND_RISK.md
docs/20_data_execution/: 20_STATEFUL_DRY_RUN_POSITIONS.md  23_MARKET_DATA_VALIDATION.md  37_MT5_READ_ONLY_LIVE_DRY_RUN.md  46_MANUAL_MT5_DESKTOP_EXECUTION.md
docs/30_strategies/: 17_STRATEGY_REGISTRY.md  68_AUTOCORRELATION_REGIME.md
docs/40_evaluation/: 15_BACKTESTING.md  54_STRATEGY_RESEARCH_SPRINT.md  64_ADAPTIVE_STRATEGY_SELECTION.md  65_CURRENT_PAPER_CANDIDATE.md  67_EXPERIMENT_LEADERBOARD.md
outputs/backtests/: live_watch_alpha_router_current_pressure_20260625_w960_folds.csv  live_watch_alpha_router_current_pressure_20260625_w960_summary.csv  live_watch_champion_asset_squeeze_aud_gbp_jpy_refresh_20260625_w960.csv  live_watch_champion_eurgbp_session_relief_20260625_w960.csv  live_watch_champion_gbpusd_session_relief_20260625_w960.csv  live_watch_champion_squeeze_refresh_20260625_w960.csv  live_watch_macd_agreement_relief_20260625_w960.csv  live_watch_macd_agreement_relief_default_20260625_w960.csv  live_watch_macd_aud_eur_chf_cap_relief_20260625_w480.csv  live_watch_macd_aud_eur_chf_cap_relief_20260625_w672.csv  live_watch_macd_aud_eur_chf_cap_relief_20260625_w960.csv  live_watch_macd_aud_eur_chf_cap_relief_consensus_20260625.csv  live_watch_macd_aud_eur_chf_cap_relief_consensus_20260625.txt  live_watch_macd_audusd_current_full_20260625_w960.csv  live_watch_macd_audusd_promoted_shape_20260625_w960.csv  live_watch_macd_cost_relief_20260625_w960.csv  live_watch_macd_cost_relief_default_20260625_w960.csv  live_watch_macd_efficiency_relief_20260625_w960.csv  live_watch_macd_efficiency_relief_default_20260625_w960.csv  live_watch_macd_eurusd_gbpusd_map_probe_20260625_w960.csv  live_watch_macd_exit_band_relief_20260625_w960.csv  live_watch_macd_hour15_nonblocked_20260625_w960.csv  live_watch_macd_live_micro_h025_default_20260625_w960.csv  live_watch_macd_live_relax_h050_20260625_w960.csv  live_watch_macd_live_relax_h050_default_20260625_w960.csv  live_watch_macd_micro_threshold_consensus_20260625.csv  live_watch_macd_micro_threshold_consensus_20260625.txt  live_watch_macd_micro_threshold_fullgrid_20260625_w480.csv  live_watch_macd_micro_threshold_fullgrid_20260625_w672.csv  live_watch_macd_micro_threshold_refresh_20260625_w960.csv  live_watch_macd_nonblocked_refresh_20260625_w960.csv  live_watch_macd_open_pair_refresh_20260625_w960.csv  live_watch_macd_slope_relief_default_20260625_w960.csv  live_watch_multi_horizon_eurusd_isolated_20260625_w960.csv  live_watch_multi_horizon_gbp_cad_chf_default_refresh_20260625_w960.csv  live_watch_multi_horizon_gbp_cad_chf_refresh_20260625_w960.csv  live_watch_opportunity_probe_aud_eur_gbp_cad_chf_default_refresh_20260625_w960.csv  live_watch_opportunity_probe_aud_eur_gbp_cad_chf_jpy_default_refresh_20260625_w960.csv  live_watch_opportunity_probe_aud_eur_gbp_cad_chf_jpy_refresh_20260625_w960.csv  (+13 more)
outputs/research/: ITERATION_LOG.md  (+6 more)
scripts/: adaptive_promotion_consensus.py  fixed_warmup_promotion_consensus.py  live_candidate_watchlist.py  live_deal_attribution.py  live_guard.ps1  live_metrics.py  live_near_promotion.py  live_pair_analysis.py  live_research_cycle.py  live_status_summary.py  live_strategy_diagnostics.py  live_supervisor.ps1  optimizer_promotion_consensus.py  update_fx_sentiment.py
tests/: test_adaptive_promotion_consensus_script.py  test_adaptive_strategy_selector.py  test_allocation_profiles.py  test_backtest.py  test_backtest_import.py  test_champion_ensemble_optimizer.py  test_cli.py  test_config.py  test_data_health.py  test_experiment_leaderboard.py  test_fixed_warmup_promotion_consensus_script.py  test_kalman_trend_optimizer.py  test_live_candidate_watchlist_script.py  test_live_deal_attribution_script.py  test_live_dry_run.py  test_live_near_promotion_script.py  test_live_pair_analysis_script.py  test_live_research_cycle_script.py  test_live_status_summary_script.py  test_live_strategy_diagnostics_script.py  test_live_trade_script.py  test_macd_momentum_optimizer.py  test_market_adapters.py  test_market_quality.py  test_metrics.py  test_mt5_executor.py  test_multi_horizon_momentum_optimizer.py  test_opportunity_probe_optimizer.py  test_optimizer_promotion_consensus_script.py  test_portfolio_allocator.py  test_portfolio_backtest.py  test_portfolio_fixed_warmup_walk_forward.py  test_portfolio_router_walk_forward.py  test_portfolio_universe_scan.py  test_quality_trend_optimizer.py  test_risk.py  test_router_optimizer.py  test_session_momentum_optimizer.py  test_status.py  test_strategy.py  (+3 more)
(+63 files in other folders)
